--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "mongoose": "^4.12.4",
+    "fs": "0.0.1-security",
+    "mongoose": "^4.12.5",
     "n": "^2.1.8",
     "nodemon": "^1.12.1",
     "request": "^2.83.0",
